fixed burger menu on mobile

--- a/frontend/src/index.scss
+++ b/frontend/src/index.scss
@@ -24,6 +24,6 @@
       font-size: 14px;
     }
     @include desktop {
-      font-size: 20px;
+      font-size: 16px;
     }
   }
